# drf_school_institution

./: README.md  manage.py  pyproject.toml
drf_school_institution/: asgi.py  settings.py  urls.py  wsgi.py
drf_school_institution/institution/: admin.py  models.py  serializers.py  urls.py  views.py
drf_school_institution/institution/migrations/: 0001_initial.py  0002_auto_20210211_1538.py  0003_auto_20210211_1553.py  0004_auto_20210211_1604.py  0005_auto_20210211_1624.py
