[tool.poetry]
name = "drf_school_institution"
version = "0.1.0"
description = ""
authors = ["Thiago Fiorelli <thifiorelli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"
djangorestframework = "^3.12.2"
prettyconf = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
